[gd_scene load_steps=4 format=3 uid="uid://b35q7fdmiol2d"]

[ext_resource type="Script" path="res://scripts/level_elements/plant.gd" id="1_sij2e"]
[ext_resource type="PackedScene" uid="uid://d26ul5ag5cafl" path="res://prefabs/level_elements/item_pickup.tscn" id="2_gu0bu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rpm2d"]
size = Vector2(80, 80)

[node name="plant" type="Area2D"]
script = ExtResource("1_sij2e")
pickup_scene = ExtResource("2_gu0bu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(40, 40)
shape = SubResource("RectangleShape2D_rpm2d")

[node name="sprite" type="Sprite2D" parent="."]
position = Vector2(40, 40)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
